--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,6 +1,8 @@
 name: CMake
 
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
