--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Test
       ##working-directory: ${{github.workspace}}/build
-      working-directory: $cm5
+      working-directory: ${{github.workspace}}
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
