--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -47,4 +47,4 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       ##run: ctest -C $BUILD_TYPE
-      run: ./Tutorial 4096
+      run: sudo ./Tutorial 4096
