--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,7 +42,8 @@ jobs:
 
     - name: Test
       ##working-directory: ${{github.workspace}}/build
-      working-directory: ${{github.workspace}}
+      ##working-directory: ${{github.workspace}}
+      working-directory: /home/runner/work/cm5/
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
