--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,10 +42,10 @@ jobs:
 
     - name: Test
       ##working-directory: ${{github.workspace}}/build
-      ##working-directory: ${{github.workspace}}
-      working-directory: /home/runner/work/cm5/
+      working-directory: ${{github.workspace}}
+      ##working-directory: /home/runner/work/cm5/
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       ##run: ctest -C $BUILD_TYPE
-      run: sudo ./Tutorial 4096
+      run: cd /home/runner/work/cm5/ ; sudo ./Tutorial 4096
